# PaperPusher

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: preprocess.py  pyproject.toml
