[project]
name = "document-processor"
version = "0.1.0"
description = "PDF OCR and NLP processing pipeline with Airflow"
requires-python = ">=3.12"
dependencies = [
  "ocrmypdf>=16.0.0",
  "pdfminer.six>=20231228",
  "spacy>=3.7.0",
  "scikit-learn>=1.3.0",
  "sqlite-utils>=3.36",
  "psycopg2-binary>=2.9.0",
  "watchdog>=3.0.0",
  "textdistance>=4.6.0",
  "pandas>=2.1.0",
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "flake8>=6.0.0"]

[tool.hatch.build.targets.wheel]
only-include = ["scripts", "dags", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=7.0.0", "flake8>=6.0.0"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"] # pycodestyle errors, pyflakes, isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
